--- a/ng6/src/app/posts/posts.component.html
+++ b/ng6/src/app/posts/posts.component.html
@@ -1,1 +1,11 @@
-<p>posts works!</p>
+<h1>Posts</h1>
+
+<ul>
+    <li *ngFor="let post of posts$">
+      <a routerLink="">{{ post.title }}</a>
+  
+      <ul>
+        <li>{{ post.body }}</li>
+      </ul>
+    </li>
+  </ul>
